#jupyter notebook #classification #clustering missing

--- a/project/PRI_2_11_Template .ipynb
+++ b/project/PRI_2_11_Template .ipynb
@@ -37,6 +37,141 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "2 - Supervised approach: incorporating relevance feedback"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#(a)\n",
+    "\n",
+    "#training(q,D_train ,R_train ,args)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__@input:__\n",
+    "\n",
+    "__q__ = string representing topic q\n",
+    "\n",
+    "__Dtrain__: *dict* w/ structure:\n",
+    "\n",
+    "    {\n",
+    "        \"itemid\": {\n",
+    "            \"headline\": \"(headline text)\",\n",
+    "            \"p\": \"(p text)\",\n",
+    "            \"dateline\": \"(dateline text)\",\n",
+    "            \"byline\": \"(byline text)\"\n",
+    "        },\n",
+    "        ...\n",
+    "    }\n",
+    "__Rtrain__ is a tuple with 2 dicts,: ({doc_id: ['p'], ...}, {doc_id: ['n'], ...}), 'p'represents the relevant and 'n' the non relevant\n",
+    "    \n",
+    "__args:__\n",
+    "* __classifier__: *MLP* or *KNN* or *MnB* and their respective tuned counterparts;\n",
+    "* __vectorizer__: *TFIDF* or *TF* or *IDF* or *BM25* \n",
+    "\n",
+    "\n",
+    "__@output:__\n",
+    "\n",
+    "    q-conditional classification model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#(b)\n",
+    "\n",
+    "#classify(d,q ,M ,args)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__@input:__\n",
+    "\n",
+    "__d__ = string represents a document ID from Dtest\n",
+    "\n",
+    "__q__ = string representing topic q\n",
+    "\n",
+    "__M__: q-conditional classification model\n",
+    "\n",
+    "__Rtrain__ is a tuple with 2 dicts,: ({doc_id: ['p'], ...}, {doc_id: ['n'], ...}), 'p'represents the relevant and 'n' the non relevant\n",
+    "    \n",
+    "__args:__\n",
+    "\n",
+    "\n",
+    "\n",
+    "__@output:__\n",
+    "\n",
+    "    probabilistic classification output on the relevance of document d to the\n",
+    "topic q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#(c)\n",
+    "\n",
+    "#evaluate(d,q ,M ,args)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__@input:__\n",
+    "\n",
+    "__Qtest__ is a list of topic ids\n",
+    "\n",
+    "__Rtest__ is a tuple with 2 dicts,: ({doc_id: ['p'], ...}, {doc_id: ['n'], ...})\n",
+    "\n",
+    "__Dtest__ is a *dict* with structure:\n",
+    "    \n",
+    "    {\n",
+    "        \"itemid\": {\n",
+    "            \"headline\": \"(headline text)\",\n",
+    "            \"p\": \"(p text)\",\n",
+    "            \"dateline\": \"(dateline text)\",\n",
+    "            \"byline\": \"(byline text)\"\n",
+    "        },\n",
+    "        ...\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "__Rtrain__ is a tuple with 2 dicts,: ({doc_id: ['p'], ...}, {doc_id: ['n'], ...}), 'p'represents the relevant and 'n' the non relevant\n",
+    "    \n",
+    "__args:__:\n",
+    "\n",
+    "* __models__: *(vectorizer,classifier)* where vectorizer can be any of the mentioned above and the same applies to the classifier\n",
+    "\n",
+    "\n",
+    "__@output__\n",
+    "\n",
+    "performance statistics regarding the underlying classification system and\n",
+    "the behavior of the aided IR system"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "3 - Graph IR System"
    ]
   },
@@ -489,12 +624,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "#Further functionalities implemented if thats the case\n",
-    "\n",
-    "#text processing options (e.g. absence versus presence of phrase extraction); \n",
-    "# IR models (including the Boolean, TF-IDF and BM25 models)."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -510,41 +640,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "- Question d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "graph.QUESTION = 'd'\n",
-    "graph.FUNCTIONALITY = None\n",
-    "graph.main()\n",
-    "\n",
-    "#   graph_results_vanilla = get_pk_results(classification_results, docs['test'], topics, topic_index,\n",
-    "#                                               type='vanilla', threshold=THRESHOLD, priors = 'baseline')\n",
-    "#        graph_results_personalized = get_pk_results(classification_results, docs['test'], topics, topic_index,\n",
-    "#                                                    type='extended', threshold=THRESHOLD, priors = 'baseline')\n",
-    "#        plot_iap_for_models({'vanilla': graph_results_vanilla, 'personalized': graph_results_personalized})\n",
-    "#"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#Further functionalities implemented if thats the case\n",
-    "\n",
-    "#text processing options (e.g. absence versus presence of phrase extraction); \n",
-    "# IR models (including the Boolean, TF-IDF and BM25 models)."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -560,9 +656,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "- Question d)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -573,9 +667,23 @@
     }
    },
    "outputs": [],
-   "source": [
-    "QUESTION = 'd'"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -584,12 +692,7 @@
      "is_executing": true
     }
    },
-   "source": [
-    "#Further functionalities implemented if thats the case\n",
-    "\n",
-    "#text processing options (e.g. absence versus presence of phrase extraction); \n",
-    "# IR models (including the Boolean, TF-IDF and BM25 models)."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -601,9 +704,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "- Question d)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -621,19 +722,12 @@
     }
    },
    "outputs": [],
-   "source": [
-    "#Further functionalities implemented if thats the case\n",
-    "\n",
-    "#text processing options (e.g. absence versus presence of phrase extraction); \n",
-    "# IR models (including the Boolean, TF-IDF and BM25 models)."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "__@input:__ and __@output__ of each funtion"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -652,7 +746,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
