#jupyter notebook #classification #clustering missing

--- a/project/PRI_2_11_Template .ipynb
+++ b/project/PRI_2_11_Template .ipynb
@@ -48,6 +48,173 @@
    "source": [
     "#(a)\n",
     "\n",
+    "#clustering(D,args)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__@input:__\n",
+    "\n",
+    "__D__: *dict* w/ structure:\n",
+    "\n",
+    "    {\n",
+    "        \"itemid\": {\n",
+    "            \"headline\": \"(headline text)\",\n",
+    "            \"p\": \"(p text)\",\n",
+    "            \"dateline\": \"(dateline text)\",\n",
+    "            \"byline\": \"(byline text)\"\n",
+    "        },\n",
+    "        ...\n",
+    "    }\n",
+    "\n",
+    "    \n",
+    "__args:__\n",
+    "* __approach__: *Agglomerative* or *Kmeans*\n",
+    "* __distance__: *cosine* or *euclidean* or *manhattan* (...)\n",
+    "\n",
+    "\n",
+    "__@output:__\n",
+    "\n",
+    "    list of clusters, each entry is a cluster cha-\n",
+    "racterized by the pair (centroid, set of document/topic identifiers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#(b)\n",
+    "\n",
+    "#interpret(cluster,D,args)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "__@input:__\n",
+    "\n",
+    "__D__: *dict* w/ structure:\n",
+    "\n",
+    "    {\n",
+    "        \"itemid\": {\n",
+    "            \"headline\": \"(headline text)\",\n",
+    "            \"p\": \"(p text)\",\n",
+    "            \"dateline\": \"(dateline text)\",\n",
+    "            \"byline\": \"(byline text)\"\n",
+    "        },\n",
+    "        ...\n",
+    "    }\n",
+    "\n",
+    "    \n",
+    "__args:__\n",
+    "\n",
+    "\n",
+    "\n",
+    "__@output:__\n",
+    "    dictionary with cluster description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#(c) \n",
+    "\n",
+    "#evaluate(D,args)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "__@input:__\n",
+    "\n",
+    "__D__: *dict* w/ structure:\n",
+    "\n",
+    "    {\n",
+    "        \"itemid\": {\n",
+    "            \"headline\": \"(headline text)\",\n",
+    "            \"p\": \"(p text)\",\n",
+    "            \"dateline\": \"(dateline text)\",\n",
+    "            \"byline\": \"(byline text)\"\n",
+    "        },\n",
+    "        ...\n",
+    "    }\n",
+    "\n",
+    "    \n",
+    "__args:__\n",
+    "\n",
+    "\n",
+    "\n",
+    "__@output:__\n",
+    "    clustering criteria"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#(a)\n",
+    "\n",
+    "#training(q,D_train ,R_train ,args)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__@input:__\n",
+    "\n",
+    "__D__: *dict* w/ structure:\n",
+    "\n",
+    "    {\n",
+    "        \"itemid\": {\n",
+    "            \"headline\": \"(headline text)\",\n",
+    "            \"p\": \"(p text)\",\n",
+    "            \"dateline\": \"(dateline text)\",\n",
+    "            \"byline\": \"(byline text)\"\n",
+    "        },\n",
+    "        ...\n",
+    "    }\n",
+    "\n",
+    "    \n",
+    "__args:__\n",
+    "\n",
+    "\n",
+    "\n",
+    "__@output:__\n",
+    "    clustering criteria"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#(a)\n",
+    "\n",
     "#training(q,D_train ,R_train ,args)\n",
     "\n"
    ]
